<resources>
    <string name="app_name">SQLite_proyect</string>
    <string name="hint_ID">Id pelicula </string>
    <string name="hint_titulo">Titulo pelicula </string>
    <string name="hint_anio">Año de lanzamiento </string>
    <string name="hint_genero"> Comedia, accion </string>
    <string name="hint_duracion"> tiempo en texto </string>
    <string name="hint_calificacion"> 1-10 </string>
    <string name="hint_presupuesto"> Millones </string>
    <string name="btn_agregar"> AGREGAR </string>
    <string name="btn_mostrar"> MOSTRAR </string>
    <string name="btn_buscar"> Buscar </string>
    <string name="btn_editar"> EDITAR </string>
    <string name="btn_eliminar"> ELIMINAR </string>
    <string name="txt_Id"> Id </string>
    <string name="txt_titulo"> Titulo </string>
    <string name="txt_anio"> Año </string>
    <string name="txt_genero"> Genero </string>
    <string name="txt_duracion"> Duracion </string>
    <string name="txt_calificacion"> Calificacion </string>
    <string name="txt_presupuesto"> Presupuesto </string>
    <string name="btn_peliculas"> Tabla peliculas </string>


    <string name="btn_TipoActor"> Tabla tipos de actores </string>
    <string name="txt_Id_tipoActor"> Id Actor </string>
    <string name="txt_nombreActor"> Tipo Actor </string>
    <string name="hint_IdTA">Id tipo de actor </string>
    <string name="hint_nombreTA">Nombre tipo de actor </string>
    <string name="btn_agregarTA"> AGREGAR </string>
    <string name="btn_mostrarTA"> MOSTRAR </string>
    <string name="btn_buscarTA"> Buscar </string>
    <string name="btn_editarTA"> EDITAR </string>
    <string name="btn_eliminarTA"> ELIMINAR </string>


    <string name="btn_Actores"> Tabla actores </string>
    <string name="txt_IDAC"> Id actor </string>
    <string name="txt_nombreAC"> Nombre Actor </string>
    <string name="txt_fechaAC"> Fecha de nacimiento AAAA/MM/DD </string>
    <string name="txt_nacionalidadAC"> Nacionalidad </string>
    <string name="txt_sexoAC"> Sexo </string>
    <string name="txt_idtipoAC">Id tipo actor </string>
    <string name="hint_IDAC"> Id actor </string>
    <string name="hint_nombreAC"> Nombre Actor </string>
    <string name="hint_fechaAC"> Fecha de nacimiento AAAA/MM/DD </string>
    <string name="hint_nacionalidadAC"> Nacionalidad </string>
    <string name="hint_sexoAC">Sexo </string>
    <string name="hint_idtipoAC">Id tipo actor </string>
    <string name="btn_agregarAC"> AGREGAR </string>
    <string name="btn_mostrarAC"> MOSTRAR </string>
    <string name="btn_buscarAC"> Buscar </string>
    <string name="btn_editarAC"> EDITAR </string>
    <string name="btn_eliminarAC"> ELIMINAR </string>

    <string name="btn_Directores"> Tabla directores </string>
    <string name="txt_IDDC"> Id director </string>
    <string name="txt_nombreDC"> Nombre director </string>
    <string name="txt_fechaDC"> Fecha de nacimiento AAAA/MM/DD </string>
    <string name="txt_nacionalidadDC"> Nacionalidad </string>
    <string name="txt_sexoDC"> Sexo </string>
    <string name="hint_IDDC"> Id director </string>
    <string name="hint_nombreDC"> Nombre director </string>
    <string name="hint_fechaDC"> Fecha de nacimiento AAAA/MM/DD </string>
    <string name="hint_nacionalidadDC"> Nacionalidad </string>
    <string name="hint_sexoDC">Sexo </string>
    <string name="btn_agregarDC"> AGREGAR </string>
    <string name="btn_mostrarDC"> MOSTRAR </string>
    <string name="btn_buscarDC"> Buscar </string>
    <string name="btn_editarDC"> EDITAR </string>
    <string name="btn_eliminarDC"> ELIMINAR </string>


    <string name="btn_Premios"> Tabla premios</string>
    <string name="txt_IdPR"> Id premio </string>
    <string name="txt_nombrePR"> Nombre premio </string>
    <string name="txt_categoriaPR"> Categoria premio </string>
    <string name="txt_anioPR"> Año del premio </string>
    <string name="txt_idpeliculaPR"> Id pelicula premio </string>
    <string name="hint_IdPR">Id premio </string>
    <string name="hint_nombrePR">Nombre del premio </string>
    <string name="hint_categoriaPR">Categoria </string>
    <string name="hint_anioPR"> Año  </string>
    <string name="hint_idpeliculaPR"> Id pelicula </string>
    <string name="btn_agregarPR"> AGREGAR </string>
    <string name="btn_mostrarPR"> MOSTRAR </string>
    <string name="btn_buscarPR"> Buscar </string>
    <string name="btn_editarPR"> EDITAR </string>
    <string name="btn_eliminarPR"> ELIMINAR </string>


    <string name="btn_PD"> Tabla participacion de directores </string>
    <string name="txt_Id_ParticipacionPD"> Id participacion </string>
    <string name="txt_Id_peliculaPD"> Id pelicula </string>
    <string name="txt_Id_directorPD"> Id director </string>
    <string name="hint_IdPD">Id participacion </string>
    <string name="hint_IdPeliculaPD"> Id pelicula </string>
    <string name="hint_IdDirectorPD"> Id director </string>
    <string name="btn_agregarPD"> AGREGAR </string>
    <string name="btn_mostrarPD"> MOSTRAR </string>
    <string name="btn_buscarPD"> Buscar </string>
    <string name="btn_editarPD"> EDITAR </string>
    <string name="btn_eliminarPD"> ELIMINAR </string>


    <string name="btn_PA"> Tabla participacion de actores </string>
    <string name="txt_Id_ParticipacionPA"> Id participacion </string>
    <string name="txt_Id_peliculaPA"> Id pelicula </string>
    <string name="txt_Id_ActorPA"> Id actor </string>
    <string name="hint_IdPA">Id participacion </string>
    <string name="hint_IdPeliculaPA"> Id pelicula </string>
    <string name="hint_IdActorPA"> Id actor </string>
    <string name="btn_agregarPA"> AGREGAR </string>
    <string name="btn_mostrarPA"> MOSTRAR </string>
    <string name="btn_buscarPA"> Buscar </string>
    <string name="btn_editarPA"> EDITAR </string>
    <string name="btn_eliminarPA"> ELIMINAR </string>







</resources>