<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmp.sqlite_proyect.MainActivityActor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="ACTORES"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtviewA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Id Actor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editIdAC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_IDAC"
                android:inputType="text" />

            <Button
                android:id="@+id/btnBuscarAC"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_buscarAC" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre completo" />

        <EditText
            android:id="@+id/editNombreAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_nombreAC"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fecha de nacimiento" />

        <EditText
            android:id="@+id/editFechaAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_fechaAC"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nacionalidad" />

        <EditText
            android:id="@+id/editNacionalidadAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_nacionalidadAC"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sexo" />

        <EditText
            android:id="@+id/editSexoAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_sexoAC"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipo de actor" />

        <EditText
            android:id="@+id/editTipoAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_idtipoAC"
            android:inputType="text" />
        <Button
            android:id="@+id/btnAgregarAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_agregarAC" />

        <Button
            android:id="@+id/btnEditarAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_editarAC" />

        <Button
            android:id="@+id/btnEliminarAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_eliminarAC" />

        <Button
            android:id="@+id/btnMostrarAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_mostrar" />

    </LinearLayout>
</RelativeLayout>