<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmp.sqlite_proyect.MainActivityDirector">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="DIRECTORES"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtviewA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Id Director" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editIdDC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_IDDC"
                    android:inputType="text" />

                <Button
                    android:id="@+id/btnBuscarDC"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_buscarDC" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre completo" />

            <EditText
                android:id="@+id/editNombreDC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_nombreDC"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha de nacimiento" />

            <EditText
                android:id="@+id/editFechaDC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_fechaDC"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nacionalidad" />

            <EditText
                android:id="@+id/editNacionalidadDC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_nacionalidadDC"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sexo" />

            <EditText
                android:id="@+id/editSexoDC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_sexoDC"
                android:inputType="text" />


            <Button
                android:id="@+id/btnAgregarDC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_agregarDC" />

            <Button
                android:id="@+id/btnEditarDC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_editarDC" />

            <Button
                android:id="@+id/btnEliminarDC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_eliminarDC" />

            <Button
                android:id="@+id/btnMostrarDC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_mostrarDC" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
