<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PantallaPrincipal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="GESTOR - COMPAÑIA"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPeliculas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_peliculas"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnTipoActor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_TipoActor"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnActor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_Actores"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPremio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_Premios"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>